--- a/sass/_blog_part.scss
+++ b/sass/_blog_part.scss
@@ -3,8 +3,12 @@
     background-color: $grey_bg_color;
     padding: 20px 0;
     .single_blog_item {
-        .single_blog_img img{
+        .single_blog_img {
             border-radius: 3rem 0.5rem 0 0;
+            overflow: hidden;
+            img {
+                transition: all 0.5s ease-in-out;
+            }
         }
         @media #{$small_mobile} {
             margin-bottom: 20px;
@@ -23,7 +27,7 @@
             img {
                 display: inline-block;
             }
-            &::after{
+            &::after {
                 right: 4rem;
                 transition: all 0.5s ease-in-out;
             }
@@ -45,10 +49,13 @@
                     transform: rotateX(-180deg);
                     margin-bottom: 7px;
                 }
-                &::after{
+                &::after {
                     right: 2rem;
                     background-color: #ff6426;
                 }
+            }
+            .single_blog_img img {
+                transform: scale(1.12);
             }
         }
     }
@@ -92,11 +99,10 @@
             margin-top: 15px;
             text-transform: capitalize;
             display: block;
-            img{
+            img {
                 display: inline-block;
             }
-            ::after{
-
+            ::after {
             }
         }
         p {
