--- a/css/style.css
+++ b/css/style.css
@@ -6348,7 +6348,7 @@ h6 {
   top: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/img/banner/contact-background-1.jpg);
+  background-color: rgba(200, 200, 200, 0.4);
   content: "";
   opacity: 0.6;
   z-index: -1;
@@ -6366,7 +6366,7 @@ h6 {
 }
 
 .breadcrumb .breadcrumb_iner .breadcrumb_iner_item h2 {
-  color: #fff;
+  color: #000;
   font-size: 45px;
   font-weight: 600;
   margin-bottom: 10px;
