--- a/sass/_breadcrumb.scss
+++ b/sass/_breadcrumb.scss
@@ -1,4 +1,5 @@
 .breadcrumb_bg{
+
 }
 .breadcrumb{
 	position: relative;
@@ -10,7 +11,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background-image: url(/img/banner/contact-background-1.jpg);
+			background-color: $grey_bg_color;
 			content: "";
 			opacity: 0.6;
 			z-index: -1;
@@ -23,7 +24,7 @@
 					display: table-cell;
 					vertical-align: middle;
 					h2{
-							color: $white_color;
+							color: $black_color;
 							font-size: 45px;
 							font-weight: 600;
 							margin-bottom: 10px;
