--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 /**************** extend css start ****************/
 /**************** common css start ****************/
 @import url("https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Lora:400,400i,700,700i");
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Lora", serif;
   padding: 0;
@@ -13,7 +17,8 @@ body {
   outline: none;
 }
 
-input:hover, input:focus {
+input:hover,
+input:focus {
   outline: none !important;
   -webkit-box-shadow: 0px 0px 0px 0px transparent !important;
           box-shadow: 0px 0px 0px 0px transparent !important;
@@ -28,7 +33,8 @@ input:hover, input:focus {
   background-color: #f6f5f1;
 }
 
-.form-row > .col, .form-row > [class*=col-] {
+.form-row > .col,
+.form-row > [class*="col-"] {
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -130,7 +136,12 @@ a:hover {
   transition: 0.5s;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #2c3033;
   font-family: "Cardo", serif;
 }
@@ -193,7 +204,10 @@ img {
   max-width: 100%;
 }
 
-a:focus, .button:focus, button:focus, .btn:focus {
+a:focus,
+.button:focus,
+button:focus,
+.btn:focus {
   text-decoration: none;
   outline: none;
   -webkit-box-shadow: none;
@@ -425,6 +439,53 @@ ul {
 }
 
 /**************** common css end ****************/
+#toTopBtn {
+  position: fixed;
+  bottom: -16vh;
+  right: 39px;
+  z-index: 98;
+  background-color: rgba(255, 100, 38, 0.4);
+  width: 20px;
+  height: 35px;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+#toTopBtn .fade-out {
+  opacity: 0.5;
+}
+
+#toTopBtn .hide {
+  opacity: 0;
+  bottom: 100vh;
+}
+
+#toTopBtn .show {
+  bottom: 1vh;
+}
+
+#toTopBtn::after {
+  content: "";
+  position: absolute;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 30px solid rgba(255, 100, 38, 0.4);
+  left: 50%;
+  top: 0;
+  -webkit-transform: translate(-50%, -98%);
+          transform: translate(-50%, -98%);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+#toTopBtn:hover {
+  background-color: #ff6426;
+}
+
+#toTopBtn:hover::after {
+  border-bottom-color: #ff6426;
+}
+
 /* Main Button Area css
 ============================================================================================ */
 .submit_btn {
