--- a/css/style.css
+++ b/css/style.css
@@ -2158,12 +2158,12 @@ ul {
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 99;
 }
 
 .menu_fixed {
   position: fixed;
-  z-index: 9999 !important;
+  z-index: 99 !important;
   width: 100%;
   padding: 5px;
   background-color: rgba(200, 200, 200, 0.4);
@@ -2234,7 +2234,7 @@ ul {
     right: 0;
   }
   .navbar-collapse {
-    z-index: 9999 !important;
+    z-index: 99 !important;
     position: absolute;
     left: 0;
     top: 71px;
@@ -2270,7 +2270,7 @@ ul {
     padding-left: 16%;
   }
   .navbar-collapse {
-    z-index: 9999 !important;
+    z-index: 99 !important;
     position: absolute;
     left: 0;
     top: 71px;
@@ -2309,7 +2309,7 @@ ul {
     padding-left: 16%;
   }
   .navbar-collapse {
-    z-index: 9999 !important;
+    z-index: 99 !important;
     position: absolute;
     left: 0;
     top: 71px;
@@ -2651,19 +2651,19 @@ ul {
 
 @media (max-width: 576px) {
   #banner_part_home {
-    display: none;
+    display: none !important;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   #banner_part_home {
-    display: none;
+    display: none !important;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   #banner_part_home {
-    display: none;
+    display: none !important;
   }
 }
 
@@ -3307,6 +3307,58 @@ ul {
   .food_menu .single_food_item .media-body h5 {
     margin-top: 10px;
   }
+}
+
+.food_menu .card {
+  border: none;
+  cursor: pointer;
+}
+
+.food_menu .card img {
+  border-radius: 100%;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+@media (max-width: 576px) {
+  .food_menu .card img {
+    padding-bottom: 10px;
+  }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  .food_menu .card img {
+    padding-bottom: 10px;
+  }
+}
+
+.food_menu .card .card-title {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.food_menu .card .card-body {
+  padding: 0 0 0 10px;
+}
+
+.food_menu .card .card-text {
+  font-size: 1em;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.food_menu .card:hover img, .food_menu .card:focus img {
+  -webkit-transform: rotatey(180deg);
+          transform: rotatey(180deg);
+}
+
+.food_menu .card:hover .card-title, .food_menu .card:focus .card-title {
+  color: #ff6426;
 }
 
 /**************** chefs_part css start ****************/
@@ -6395,6 +6447,14 @@ h6 {
   width: 100%;
   height: 250px;
   border: 0;
+}
+
+.list-modal .modal-content .modal-title {
+  color: #ff6426;
+}
+
+.list-modal .modal-content .description {
+  font-size: 20px;
 }
 
 .breadcrumb {
