--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -234,13 +234,13 @@
     right: 0;
     width: 100%;
     @media #{$small_mobile} {
-       display: none;
+       display: none!important;
     }
     @media #{$large_mobile} {
-        display: none;
+        display: none!important;
     }
     @media #{$tab_device} {
-        display: none;
+        display: none!important;
     }
     @media #{$medium_device} {
         background-size: auto;
