--- a/sass/_food_menu.scss
+++ b/sass/_food_menu.scss
@@ -1,54 +1,54 @@
 /**************** food_menu css start ****************/
-.food_menu{
+.food_menu {
     padding: 140px 0px 90px;
-    @media #{$small_mobile}{
+    @media #{$small_mobile} {
         padding: 70px 0px 50px;
     }
-    @media #{$large_mobile}{
+    @media #{$large_mobile} {
         padding: 70px 0px 50px;
     }
-    @media #{$tab_device}{
+    @media #{$tab_device} {
         padding: 70px 0px 50px;
     }
-    @media #{$medium_device}{
+    @media #{$medium_device} {
         padding: 70px 0px 40px;
     }
     .nav-tabs {
         border-bottom: 0px solid #dee2e6;
         position: relative;
-        a{
+        a {
             font-size: 16px;
             color: #0d1c26;
             padding: 45px 25px 25px;
             position: relative;
-            @media #{$small_mobile}{
+            @media #{$small_mobile} {
                 padding: 5px 10px 15px;
             }
-            @media #{$large_mobile}{
+            @media #{$large_mobile} {
                 padding: 20px 25px 25px;
             }
-            @media #{$tab_device}{
+            @media #{$tab_device} {
                 padding: 20px 25px 25px;
             }
-            @media #{$medium_device}{
+            @media #{$medium_device} {
                 padding: 35px 15px 15px;
             }
-            &:last-child{
+            &:last-child {
                 padding: 45px 0px 20px 20px;
-                @media #{$small_mobile}{
+                @media #{$small_mobile} {
                     padding: 5px 10px 15px;
                 }
-                @media #{$large_mobile}{
+                @media #{$large_mobile} {
                     padding: 20px 0px 20px 20px;
                 }
-                @media #{$tab_device}{
+                @media #{$tab_device} {
                     padding: 20px 0px 20px 20px;
                 }
-                @media #{$medium_device}{
+                @media #{$medium_device} {
                     padding: 35px 0px 15px 15px;
                 }
             }
-            img{
+            img {
                 display: none;
                 position: absolute;
                 left: 0;
@@ -58,7 +58,7 @@
             }
         }
         .active {
-            img{
+            img {
                 display: block;
                 position: absolute;
                 left: 0;
@@ -71,33 +71,33 @@
             }
             color: $btn_bg;
         }
-        #Sneaks-tab{
-            img{
+        #Sneaks-tab {
+            img {
                 left: 25px;
             }
         }
     }
-    .single_food_item{
+    .single_food_item {
         margin-bottom: 50px;
         background-color: $white_color;
-        @media #{$small_mobile}{
+        @media #{$small_mobile} {
             margin-bottom: 20px;
             padding: 10px;
         }
-        @media #{$large_mobile}{
+        @media #{$large_mobile} {
             margin-bottom: 20px;
             padding: 10px;
         }
-        @media #{$tab_device}{
+        @media #{$tab_device} {
             margin-bottom: 20px;
             padding: 10px;
         }
-        @media #{$medium_device}{
+        @media #{$medium_device} {
             margin-bottom: 30px;
         }
-        img{
+        img {
             border-right: 10px solid $section_bg;
-            @media #{$small_mobile}{
+            @media #{$small_mobile} {
                 border-right: 0px solid $section_bg;
                 margin: 0 auto;
                 display: block;
@@ -105,7 +105,7 @@
                 text-align: center;
                 border-radius: 50%;
             }
-            @media #{$large_mobile}{
+            @media #{$large_mobile} {
                 border-right: 0px solid $section_bg;
                 margin: 0 auto;
                 display: block;
@@ -113,7 +113,7 @@
                 text-align: center;
                 border-radius: 50%;
             }
-            @media #{$tab_device}{
+            @media #{$tab_device} {
                 border-right: 0px solid $section_bg;
                 margin: 0 auto;
                 display: block;
@@ -121,48 +121,101 @@
                 text-align: center;
                 border-radius: 50%;
             }
-            @media #{$medium_device}{
-            
-            } 
+            @media #{$medium_device} {
+            }
         }
-        .media-body{
+        .media-body {
             padding-left: 26px;
-            @media #{$small_mobile}{
+            @media #{$small_mobile} {
                 margin-top: 10px;
                 padding-left: 00px;
                 text-align: center;
             }
-            @media #{$large_mobile}{
+            @media #{$large_mobile} {
                 margin-top: 10px;
                 padding-left: 00px;
                 text-align: center;
             }
-            @media #{$tab_device}{
+            @media #{$tab_device} {
                 margin-top: 10px;
                 padding-left: 00px;
                 text-align: center;
             }
-            @media #{$medium_device}{
+            @media #{$medium_device} {
                 padding-left: 0px;
             }
-            h3{
+            h3 {
                 font-size: 20px;
                 font-weight: 700;
             }
-            h5{
+            h5 {
                 font-size: 20px;
                 font-weight: 700;
                 color: $common_color;
                 margin-top: 20px;
-                @media #{$small_mobile}{
+                @media #{$small_mobile} {
                     margin-top: 10px;
                 }
-                @media #{$large_mobile}{
+                @media #{$large_mobile} {
                     margin-top: 10px;
                 }
-                @media #{$tab_device}{
+                @media #{$tab_device} {
                     margin-top: 10px;
                 }
+            }
+        }
+    }
+
+    //my style
+
+    .card {
+        border: none;
+        cursor: pointer;
+        img {
+            border-radius: 100%;
+            transition: all 0.5s ease-in-out;
+            @media #{$small_mobile} {
+                padding-bottom: 10px;
+            }
+            @media #{$large_mobile} {
+                padding-bottom: 10px;
+            }
+            @media #{$tab_device} {
+            }
+            @media #{$medium_device} {
+            }
+        }
+        .card-title{
+            transition: all 0.5s ease-in-out;
+        }
+        .card-body {
+            padding: 0 0 0 10px;
+        }
+        .card-text {
+            font-size: 1em;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            line-clamp: 3;
+            -webkit-box-orient: vertical;
+            box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            @media #{$small_mobile} {
+            }
+            @media #{$large_mobile} {
+            }
+            @media #{$tab_device} {
+            }
+            @media #{$medium_device} {
+            }
+        }
+        &:hover,
+        &:focus {
+            img {
+                transform: rotatey(180deg);
+            }
+            .card-title{
+                color: $common_color;
             }
         }
     }
